# KoGE

./: CMakeLists.txt
include/glad/: glad.h
src/: glad.c  main.cpp  time.cpp  time.h
src/graphic/: graphics.cpp  graphics.h  shader.cpp  shader.h  texture.cpp  texture.h
src/graphic/camera/: camera.h  cameraController.cpp  cameraController.h  perspectiveCamera.h
src/ui/font/: font.cpp  font.h  fonts.cpp  fonts.h  glyph.cpp  glyph.h
src/util/: resources.cpp  resources.h
